# bpfilter

./: .clang-tidy  CLAUDE.md  CMakeLists.txt  a.out  bench.cpp  bperf.tcl  perf.script  vmlinux.h
.claude/commands/: feature.md  pre-commit.md  review.md
.github/: fedora-39.Dockerfile  fedora-40.Dockerfile  fedora-41.Dockerfile  ubuntu-24.04.Dockerfile  ubuntu-24.10.Dockerfile
.github/workflows/: ci.yaml
doc/: CMakeLists.txt  benchmarks-summary-generator  benchmarks-summary.html.template  index.rst  usage.rst
doc/developers/: bfoptimize.rst  style.rst  tests.rst
doc/usage/: bfcli.rst
src/: CMakeLists.txt
src/bfcli/: CMakeLists.txt  chain.c  lexer.l  main.c  parser.y  print.c  ruleset.c
src/bpfilter/: CMakeLists.txt  ctx.c  ctx.h  main.c  opts.c  opts.h
src/bpfilter/bpf/: parse_ipv6_eh.bpf.c
src/bpfilter/cgen/: cgen.c  cgen.h  cgroup.c  elfstub.c  elfstub.h  elfstub_pvt.h.in  fixup.c  fixup.h  handle.c  handle.h  jmp.h  nf.c  program.c  program.h  runtime.h  stub.c  tc.c  xdp.c
src/bpfilter/cgen/matcher/: ip4.c  ip6.c
src/bpfilter/cgen/prog/: link.c  link.h  map.c  map.h
src/bpfilter/xlate/: cli.c
src/bpfilter/xlate/ipt/: ipt.c
src/cli/: parser.y
src/core/: CMakeLists.txt  Chain.hpp  Matcher.hpp  Rule.hpp  Set.hpp  bpf.c  bpf.h  btf.c  chain.c  chain.h  flavor.h  helper.h  hook.c  list.c  logger.c  matcher.c  matcher.h  request.h  runtime.h
src/generator/: counter.c  counter.h  program.c  program.h
src/generator/matcher/: meta.c  meta.h
src/libbpfilter/: CMakeLists.txt  bpf.c  bpfilter.h  chain.c  cli.c  io.c  request.c
src/libbpfilter/cgen/matcher/: set.c
src/libbpfilter/include/bpfilter/: bpf.h  bpf_types.h  bpfilter.h  flavor.h  helper.h  io.h  list.h  logger.h  request.h  verdict.h
tests/: CMakeLists.txt  rules.bpfilter
tests/benchmark/: CMakeLists.txt
tests/benchmarks/: bfbencher  bfbencher_lib.py  main.cpp
tests/benchmarks/bfbencher/: __init__.py  __main__.py
tests/check/: CMakeLists.txt
tests/e2e/: CMakeLists.txt  bfcli.sh  cli.sh  e2e_test_util.sh  genpkts.py  main.c  make_token.c
tests/e2e/cli/: chain_update_set.sh
tests/e2e/daemon/: map_decl_tags.sh  pin_updated_chain.sh
tests/e2e/rules/: policy_continue.sh
tests/e2e/rulesets/: cgroup_egress.bf  cgroup_ingress.bf  nf_forward.bf  nf_local_in.bf  nf_local_out.bf  nf_post_routing.bf  nf_pre_routing.bf  rulesets.sh  tc_egress.bf  tc_ingress.bf
tests/harness/: CMakeLists.txt  daemon.c  daemon.h  fake.c  fake.h  process.h  prog.c  prog.h  test.c  test.h
tests/unit/: CMakeLists.txt  mock.c  mock.h
tests/unit/core/: matcher.c
tests/unit/libbpfilter/: btf.c  chain.c  io.c  request.c
tests_deprecated/harness/: CMakeLists.txt
tests_deprecated/unit/libbpfilter/: list.c
tools/: bfoptimize  bfoptimize.requirements.txt  perfrecord
tools/benchmarks/: CMakeLists.txt  Chain.hpp  Matcher.hpp  Rule.hpp  Set.hpp  benchmark.cpp  benchmark.hpp  bfbencher  main.cpp  results.html.j2
tools/checks/: CMakeLists.txt
tools/cmake/: Tests.cmake
